[package]
name = "ropenttd"
version = "0.0.2"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>"]
edition = "2021"
repository = "https://github.com/fernandobatels/ropenttd"
keywords = ["openttd", "save loader"]
categories = ["games"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-lzma = "0.5.1"
bytes = "1.0.1"
subslice = "0.2.2"